--- a/app/.github/workflows/ci-cd.yml
+++ b/app/.github/workflows/ci-cd.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r app/requirements.txt
+        pip install -r requirements.txt
 
     - name: Run Tests
       run: |
